package fr.ensma.a3.ia.jeupersonnagesv1.elements.comportement;

/**
 * IAttaquable
 */
public interface IAttaquable {

    public void estAttaque(final Integer puissance);

    public String getIdentPerso();
}
