package fr.ensma.a3.ia.jeupersonnagesv1.elements.comportement;

/**
 * IAttaquableTerre
 */
public interface IAttaquableTerre {

    public void estAttaque(final Integer puissance);

    public String getIdentPerso();
}
