package fr.ensma.a3.ia.jeupersonnagesv1.elements.comportement.deplacements;

import fr.ensma.a3.ia.jeupersonnagesv1.elements.ElementJeu;

/**
 * Définition d'un comportement de déplacement
 **/
public interface IDeplacement {
	public void deplacer(final ElementJeu elm);
}
