package fr.ensma.a3.ia.jeupersonnagesv1.elements;

/**
 * Façade d'un ElementJeu
 * @author Mikky
 *
 */
public interface IElementJeu {
    @Override
    String toString();    
}
