package fr.ensma.a3.ia.jeupersonnagesv1.elements.comportement;

/**
 * IAttaquant
 */
public interface IAttaquant {

    public void aLAttaque(final IAttaquable cible);
}
