package fr.ensma.a3.ia.jeupersonnagesv1.elements.comportement;

/**
 * IAttaquantTerre
 */
public interface IAttaquantTerre {

    public void aLAttaque(final IAttaquableTerre cible);
}
