
@startuml
skinparam groupinheritance 1
package jeupersonnages{
        package jeupersonnages.map {
                enum ECouleurBase {
                        rouge
                        jaune
                        vert
                        bleu
                }
                class Base{
                        -nom : String[1]
                }
                Base o--"coulBase 1" ECouleurBase
        }
        package jeupersonnages.elements {
                abstract ElementJeu {
                        #nivVie : Real[1]
                }
                package jeupersonnages.elements.personnages {
                        abstract PersoVivant {
                                #identPerso : String[1]
                        }
                        package jeupersonnages.elements.personnages.humains {
                                abstract PersoHumain {

                                }
                                class Ouvrier {
                                        -puissTravail : Integer[1]
                                        -{static} numInstance : Integer[1]
                                }
                                class Guerrier {
                                        -puissAtt : Integer[1]
                                        -{static} numInstance : Integer[1]
                                }
                                PersoHumain <|-- Ouvrier
                                PersoHumain <|-- Guerrier
                        }
                        PersoVivant <|-- PersoHumain
                        package jeupersonnages.elements.personnages.animaux {
                                abstract PersoAnimal{

                                }
                                class Dragon {
                                        -puissAtt : [Integer]
                                        -{static} numInstance : Integer[1]
                                }
                                PersoAnimal <|-- Dragon
                        }
                        PersoVivant <|-- PersoAnimal
                }
                ElementJeu <|-- PersoVivant
                interface IElementJeu {
                }
                IElementJeu <|.. ElementJeu
                package jeupersonnages.elements.objets {
                        abstract Arme {
                                -puissAtt : Integer[1]
                        }
                        abstract Catapulte {
                                -{static} numInstance : Integer[1]
                        }
                        Arme <|-- Catapulte
                        class Munition{
                                -puissAtt : Integer[1]
                        }
                        Catapulte o-- "mesBoulets 0 .. 10" Munition

                }
                ElementJeu <|-- Arme

                package jeupersonnages.elements.groupements {
                        interface ITroupe {
                                +rejoindreTroupe(elem : IDeplacable)
                                +quitterTroupe(elem : IDeplacable)
                                +deplacer()
                        }
                        class Troupe implements ITroupe, IDeplacable{
                        }
                        Troupe o--> "laTroupe 1..*" IDeplacable
                }
                package jeupersonnages.elements.comportement {
                        package jeupersonnages.elements.comportement.deplacements {
                                interface IDeplacement {
                                        +deplacer(elem : IElementJeu)
                                }
                                class EnMarchant implements IDeplacement
                                class EnCourrant implements IDeplacement
                                class EnVolant implements IDeplacement
                                class EnFlottant implements IDeplacement
                                class Immobile implements IDeplacement
                                ElementJeu o---> "compoDeplacement 1" IDeplacement
                        }
                        interface IDeplacable{
                                +deplacer()
                        }
                        interface IAttaquable {
                                +estAttaque(puiss : Integer)
                        }
                        interface IAttaquant {
                                +aLAttaque(cible:IAttaquable)
                        }
                        Interface IAttaque {}

                        interface IAttaquableTerre {
                                +estAttaque(puiss : Integer)
                        }
                        interface IAttaquantTerre {
                                +aLAttaque(cible:IAttaquableTerre)
                        }
                        Interface IAttaqueTerre {}
                        Catapulte ..|> IDeplacable
                        PersoVivant ..|> IDeplacable
                        IAttaque --|> IAttaquant
                        IAttaque --|> IAttaquable
                        IAttaqueTerre --|> IAttaquantTerre
                        IAttaqueTerre --|> IAttaquableTerre
                        package jeupersonnages.elements.comportement.attaques {
                                interface ICompoAttaque {
                                        +attaquer(cible : IAttaquable)
                                        +attaquer(cible : IAttaquableTerre)
                                }
                                class AttaquePas implements ICompoAttaque
                                class AuCouteau implements ICompoAttaque
                                class ALaHache implements ICompoAttaque
                                class Sortilege implements ICompoAttaque
                                class CracherFeu implements ICompoAttaque                                        
                                ElementJeu o---> "compoAttaque 1" ICompoAttaque
                        }

                }
                Catapulte ..|> IAttaque
                Catapulte ..|> IAttaqueTerre
                Dragon ..|> IAttaque
                Dragon ..|> IAttaquantTerre
                Guerrier ..|> IAttaqueTerre
                Guerrier ..|> IAttaquable
                Ouvrier ...|> IAttaquable
                Ouvrier ...|> IAttaquableTerre

        }
        IElementJeu "elem *" <-- Base
        ElementJeu --> "laBase 1" Base

}
@enduml
